--- a/education.html
+++ b/education.html
@@ -201,15 +201,15 @@
 
         <div class="timeline-container">
             <div class="timeline-item">
-                <div class="timeline-year">2022 - Present</div>
+                <div class="timeline-year">2024 - Present</div>
                 <h3>Bachelor of Science in Physics</h3>
                 <p><strong>Leipzig University, Germany</strong></p>
                 <p>Currently pursuing my undergraduate degree in Physics with a focus on theoretical physics and computational methods. My coursework includes advanced topics in quantum mechanics, statistical mechanics, electrodynamics, and mathematical physics.</p>
                 <p><strong>Relevant Coursework:</strong></p>
                 <ul>
-                    <li>Quantum Mechanics I & II</li>
+                    <li>Quantum Mechanics(100)</li>
                     <li>Statistical Mechanics and Thermodynamics</li>
-                    <li>Classical Mechanics</li>
+                    <li>Topological Matter</li>
                     <li>Electrodynamics</li>
                     <li>Mathematical Methods in Physics</li>
                     <li>Computational Physics</li>
@@ -217,7 +217,7 @@
             </div>
 
             <div class="timeline-item">
-                <div class="timeline-year">2021 - 2022</div>
+                <div class="timeline-year">2020 - 2024</div>
                 <h3>Foundation Year in Physics</h3>
                 <p><strong>Nanjing University of Aeronautics and Astronautics, China</strong></p>
                 <p>Completed preparatory studies in physics and mathematics, building a strong foundation in classical physics, calculus, and linear algebra. This program prepared me for advanced studies in theoretical physics.</p>
@@ -240,12 +240,20 @@
                 <li>Outstanding Performance in Quantum Mechanics Course</li>
             </ul>
         </div>
-
+        
         <div class="timeline-container">
             <div class="timeline-item">
-                <div class="timeline-year">Summer 2024</div>
-                <h3>International Summer School on Quantum Information</h3>
-                <p>Participated in an intensive summer program focusing on quantum information theory, quantum computing, and quantum algorithms. Engaged with leading researchers and completed a project on quantum error correction.</p>
+                <div class="timeline-year">Summer 2023</div>
+                <h3>The Third Summer School of String Theory, Field Theory and Holographic Theory </h3>
+                <p> </p>
+            </div>
+        </div>
+        
+        <div class="timeline-container">
+            <div class="timeline-item">
+                <div class="timeline-year">Spring 2025</div>
+                <h3>Jürgen Ehlers Spring School (Gravitational Physics) </h3>
+                <p>Organized by the Max Planck Institute for Gravitational Physics (Albert Einstein Institute), Lectures on general relativity, black holes, gravitational waves, cosmology, quantum field theory, and quantum gravity. In particular the recent discoveries of merging black hole and neutron star are disscussed. The school also gives insights into current research at the institute, both related to gravitational waves and beyond. </p>
             </div>
         </div>
     </div>
